Fix avatar file deletion code

--- a/application/templates/settings.html
+++ b/application/templates/settings.html
@@ -17,6 +17,9 @@
             <div class="col-sm-8">
                 <br><br>
                 <h2>Account Settings</h2>
+                <h3>{{ path }}</h3>
+                <h3>{{ error1 }}</h3>
+                <h3>{{ error2 }}</h3>
             </div>
         </div>
         <div id='edit_avatar' style="display: none" class="row">
