--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -97,6 +97,7 @@
         <div class="row">
 
             <!-- Left vertical nagivation panel -->
+            <!-- Positionis is fixed -->
             <div class="col-sm-2 left_nav">
 
                 <!-- Budget row -->
@@ -128,6 +129,8 @@
                 </a>
 
             </div>
+
+            <!-- Because position is fixed on left nav, this empty col-2 lays over it and pushes the remaining 10  -->
             <div class="col-sm-2"></div>
 
 
@@ -138,7 +141,7 @@
                 {% with messages = get_flashed_messages(with_categories=true) %}
                 {% if messages %}
                 {% for category, message in messages %}
-                <div class="col-sm-10">
+                <div class="col-xs-10">
                     <div class="alert alert-{{ category }} border text-center" role="alert">
                         {{ get_flashed_messages() | join(" ") }}
                     </div>
