--- a/application/templates/login.html
+++ b/application/templates/login.html
@@ -15,6 +15,7 @@
                     autocomplete="off" autofocus>
                 <input type="password" name="password" class="form-control login-form" placeholder="Password"
                     autocomplete="off" autofocus>
+                <input type="hidden" value="{{ request.args.get('next', '') }}" />
                 <button type="submit" class="btn btn-primary">Login</button>
             </div>
         </form>
