"Comments added to settings route"

--- a/application/templates/settings.html
+++ b/application/templates/settings.html
@@ -75,6 +75,7 @@
                             </th>
                         </tr>
                         <tr>
+                            <!-- DELETE ACCOUNT -->
                             <th colspan="2">
                                 <button id="del_acct_btn" class="btn btn-danger btn-sm"
                                     onclick="display_toggle(this.id, 'pw_reset_btn', 'del_acct_form', 'del_acct_cancel_btn')">Delete
