Testing with ignoring database in .gitignore #4

--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -216,7 +216,7 @@
 
                             <!-- FULLY FUND CATEGORY -->
                             <div class="form-group">
-                                {{ category.cat_name }}
+                                TEST {{ category.cat_name }}
                                 <input type="text" name="TO" value="{{ category.cat_name }}" hidden>
                                 <input type="text" name="FROM" value="Unassigned" hidden>
                                 <input type="text" name="amount" value="-1" hidden>
